classDiagram
    %% PawPal — pet-care planning app

    class Owner {
        +int ownerId
        +string name
        +string email
        +string phoneNumber
        -string passwordHash
        +signUp(name, email, password) Owner
        +signIn(email, password) bool
        +signOut() void
        +setPassword(newPassword) void
        +addPet(pet) void
        +removePet(petId) void
        +displayPets() Pet[]
    }
    class Pet {
        +int petId
        +string petName
        +string animalType
        +string petBreed
        +float age
        +createMeal(food, days) Meal
        +scheduleMedication(med) Medication
        +scheduleWalk(walk) void
        +scheduleGrooming(appointment) void
        +buildShoppingCart() ShoppingCart
        +listCareItems() CareItem[]
    }
    class CareItem {
        <<abstract>>
        +int itemId
        +TimeOfDay timeOfDay
        +string notes
        +describe() string
    }
    class Meal {
        +string foodName
        +float portionGrams
        +DayOfWeek[] days
    }
    class Medication {
        +string medName
        +string dosage
        +string frequency
        +Date startDate
        +Date endDate
    }
    class Walk {
        +int durationMinutes
        +string route
        +DayOfWeek[] days
    }
    class GroomingAppointment {
        +Date dateTime
        +string serviceType
        +string provider
        +bool confirmed
    }
    class ShoppingCart {
        +int cartId
        +DateRange week
        +addItem(item) void
        +removeItem(itemId) void
        +total() float
    }
    class ShoppingItem {
        +string productName
        +int quantity
        +float unitPrice
        +string category
    }
    class CarePlanner {
        +generateDailyPlan(pet, date) DailyPlan
        -collectItemsForDay(pet, date) CareItem[]
        -explainReasoning(items) string
    }
    class DailyPlan {
        +int planId
        +Date date
        +string reasoning
        +addEntry(entry) void
        +toSchedule() PlanEntry[]
    }
    class PlanEntry {
        +TimeOfDay timeOfDay
        +string action
        +bool completed
    }

    Owner "1" *-- "0..*" Pet : owns
    CareItem <|-- Meal
    CareItem <|-- Medication
    CareItem <|-- Walk
    CareItem <|-- GroomingAppointment
    Pet "1" *-- "0..*" Meal : feeds
    Pet "1" *-- "0..*" Medication : medicates
    Pet "1" *-- "0..*" Walk : walks
    Pet "1" *-- "0..*" GroomingAppointment : grooms
    Pet "1" *-- "1" ShoppingCart : needs
    ShoppingCart "1" *-- "0..*" ShoppingItem : contains
    CarePlanner ..> Pet : reads
    CarePlanner ..> CareItem : reads
    CarePlanner ..> DailyPlan : creates
    Pet "1" --> "0..*" DailyPlan : has
    DailyPlan "1" *-- "1..*" PlanEntry : organizes
    PlanEntry ..> CareItem : references
